APIC V12 step1